Update rendering of resume and cv

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -17,9 +17,7 @@ knitr::opts_chunk$set(
   echo = FALSE
 )
 
-library(magrittr) # For the pipe
 source("cv_printing_functions.r")
-
 
 # Read in all data and initialize a CV printer object
 CV <- create_CV_object(
@@ -65,7 +63,7 @@ Contact {#contact}
 --------------------------------------------------------------------------------
 
 ```{r}
-CV %>% print_contact_info()
+CV |> print_contact_info()
 ```
 
 
@@ -74,7 +72,7 @@ Language Skills {#skills}
 --------------------------------------------------------------------------------
 
 ```{r}
-CV %>% print_skill_bars()
+CV |> print_skill_bars()
 ```
 
 
@@ -82,9 +80,9 @@ CV %>% print_skill_bars()
 Disclaimer {#disclaimer}
 --------------------------------------------------------------------------------
 
-Made with the R package [**pagedown**](https://github.com/rstudio/pagedown). 
+Made with my package [**datadrivencv**](https://nickstrayer.me/datadrivencv). 
 
-The source code is available [on github.com/nstrayer/cv](https://github.com/nstrayer/cv).
+The source code is available at [https://github.com/nstrayer/cv](https://github.com/nstrayer/cv).
 
 Last updated on `r Sys.Date()`.
 
@@ -97,8 +95,8 @@ Nick Strayer {#title}
 --------------------------------------------------------------------------------
 
 ```{r}
-# Note the special double pipe so we modify the CV object in place
-CV %<>% print_text_block("intro") 
+# Note the assignment back to CV. This is so the link stripping works properly in PDF mode
+CV <- print_text_block(CV, "intro") 
 ```
 
 
@@ -107,26 +105,32 @@ Education {data-icon=graduation-cap data-concise=true}
 --------------------------------------------------------------------------------
 
 ```{r}
-CV %<>% print_section('education')
+CV <- print_section(CV, 'education')
 ```
 
-Industry Experience {data-icon=suitcase}
---------------------------------------------------------------------------------
-
-```{r}
-CV %<>% print_section('industry_positions')
-```
 
 
 Research Experience {data-icon=laptop}
 --------------------------------------------------------------------------------
 
 ```{r}
-CV %<>% print_section('research_positions')
+CV <- print_section(CV, 'research_positions')
 ```
 
 
 
+Industry Experience {data-icon=suitcase}
+--------------------------------------------------------------------------------
+
+::: aside
+```{r}
+CV <- print_text_block(CV, 'industy_experience_aside')
+```
+:::
+
+```{r}
+CV <- print_section(CV, 'industry_positions')
+```
 
 <!-- These breaks just force a new page so section doesnt get cut off -->
 <br>
@@ -138,12 +142,12 @@ Teaching Experience {data-icon=chalkboard-teacher}
 
 ::: aside
 ```{r}
-CV %<>% print_text_block('teaching_experience_aside')
+CV <- print_text_block(CV, 'teaching_experience_aside')
 ```
 :::
 
 ```{r}
-CV %<>% print_section('teaching_positions')
+CV <- print_section(CV, 'teaching_positions')
 ```
 
 
@@ -153,12 +157,12 @@ Selected Data Science Writing {data-icon=chart-line}
 
 ::: aside
 ```{r}
-CV %<>% print_text_block('data_science_writing_aside')
+CV <- print_text_block(CV, 'data_science_writing_aside')
 ```
 :::
 
 ```{r}
-CV %<>% print_section('data_science_writings')
+CV <- print_section(CV, 'data_science_writings')
 ```
 
 
@@ -167,7 +171,7 @@ Selected Press (About)  {data-icon=newspaper}
 --------------------------------------------------------------------------------
 
 ```{r}
-CV %<>% print_section('about_me_press')
+CV <- print_section(CV, 'about_me_press')
 ```
 
 
@@ -179,7 +183,7 @@ Selected Press (By)  {data-icon=newspaper}
 --------------------------------------------------------------------------------
 
 ```{r}
-CV %<>% print_section('by_me_press')
+CV <- print_section(CV, 'by_me_press')
 ```
 
 
@@ -188,12 +192,12 @@ Selected Publications, Posters, and Talks {data-icon=book}
 --------------------------------------------------------------------------------
 
 ```{r}
-CV %<>% print_section('academic_articles')
+CV <- print_section(CV, 'academic_articles')
 ```
 
 
 
 ```{r}
-CV %<>% print_links()
+print_links(CV)
 ```
 
